Final report done.

--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -231,4 +231,36 @@ in today's games.}},
  address = {Hingham, MA, USA},
  keywords = {goals, intentions, plan inference, plans},
 } 
+
+@book{mccarthai,
+ author = {{John McCarthy}},
+ title = {{What is Artificial Intelligence}},
+ month = nov,
+ year = {2007},
+} 
+
+@inproceedings{SchaefferBBK0LLS05,
+  author    = {Jonathan Schaeffer and
+               Yngvi Bj{\"o}rnsson and
+               Neil Burch and
+               Akihiro Kishimoto and
+               Martin M{\"u}ller and
+               Robert Lake and
+               Paul Lu and
+               Steve Sutphen},
+  title     = {Solving Checkers},
+  booktitle = {IJCAI},
+  year      = {2005},
+  pages     = {292-297},
+}
+
+@proceedings{aaai/1997w6,
+  title     = {Deep Blue Versus Kasparov: The Significance for Artificial
+               Intelligence, Collected Papers from the 1997 AAAI Workshop},
+  booktitle = {Deep Blue Versus Kasparov: The Significance for Artificial
+               Intelligence},
+  publisher = {AAAI Press},
+  year      = {1997},
+  isbn      = {1-57735-031-6},
+}
  
